@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_releases_template.html,v 1.2 2008-04-30 18:23:11 guru Exp $  -->
+<!--  $Id: gmt_releases_template.html,v 1.3 2008-04-30 21:06:13 guru Exp $  -->
 <TITLE>GMT Release Notes</TITLE>
 <BODY bgcolor="#ffffff">
 <CENTER><H2>GMT Release Notes</CENTER></h2><P>
@@ -58,7 +58,7 @@ version of GMT (the CVS version) see the
 </OL>
 <LI><B>GMT 1</B>
 <OL>
-<LI>13-JUN-1988: GMT Version 1.0 Released</LI>
+<LI>1-JUL-1988: GMT Version 1.0 Released</LI>
 </OL>
 </UL>
 <HR>
