@@ -1,5 +1,5 @@
 <HTML>
-<!--  $Id: gmt_windows.html,v 1.1 2008-04-26 21:06:43 guru Exp $  -->
+<!--  $Id: gmt_windows.html,v 1.2 2008-04-30 21:06:13 guru Exp $  -->
 <TITLE>GMT for Windows</TITLE>
 <BODY bgcolor="#ffffff">
 <CENTER><H1><IMG SRC="winxp.gif" WIDTH="63" HEIGHT="56" ALIGN=left>GMT for Windows<IMG SRC="vista.jpg" WIDTH="63" HEIGHT="56" ALIGN=right></H1></CENTER>
@@ -20,49 +20,49 @@ and extract the files with a suitable extractor (such as <A HREF="http://sourcef
 <OL>
 	<LI>The SOEST Master Site (Hawaii, USA):
 	<UL>
-		<LI><A HREF="ftp://ftp.soest.hawaii.edu/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution.
+		<LI><A HREF="ftp://ftp.soest.hawaii.edu/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution.
 		<LI><A HREF="ftp://ftp.soest.hawaii.edu/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines.
 		<LI><A HREF="ftp://ftp.soest.hawaii.edu/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The US 1 Mirror Site (NOAA, Maryland, USA):
 	<UL>
-		<LI><A HREF="ftp://ibis.grdl.noaa.gov/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://ibis.grdl.noaa.gov/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://ibis.grdl.noaa.gov/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://ibis.grdl.noaa.gov/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The US 2 Mirror Site (IRIS, Washington, USA):
 	<UL>
-		<LI><A HREF="ftp://ftp.iris.washington.edu/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://ftp.iris.washington.edu/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://ftp.iris.washington.edu/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://ftp.iris.washington.edu/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The Europe 1 Mirror Site (U of Oslo, Oslo, Norway):
 	<UL>
-		<LI><A HREF="ftp://ftp.geologi.uio.no/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://ftp.geologi.uio.no/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://ftp.geologi.uio.no/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://ftp.geologi.uio.no/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The Europe 2 Mirror Site (Vienna U of Technology, Vienna, Austria):
 	<UL>
-		<LI><A HREF="ftp://d.tuwien.ac.at/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://d.tuwien.ac.at/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://d.tuwien.ac.at/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://d.tuwien.ac.at/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The Europe 2 Mirror Site (Vienna U of Technology, Vienna, Austria):
 	<UL>
-		<LI><A HREF="ftp://gd.tuwien.ac.at/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://gd.tuwien.ac.at/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://gd.tuwien.ac.at/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://gd.tuwien.ac.at/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The Asia Mirror Site (Tokai U, Shimizu, Japan):
 	<UL>
-		<LI><A HREF="ftp://ftp.scc.u-tokai.ac.jp/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://ftp.scc.u-tokai.ac.jp/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://ftp.scc.u-tokai.ac.jp/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://ftp.scc.u-tokai.ac.jp/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
 	<LI>The Australia Mirror Site (U of Sydney, Sydney, Australia):
 	<UL>
-		<LI><A HREF="ftp://mirror.geosci.usyd.edu.au/gmt/windows/GMT_basic_install.exe">GMT_basic_installer.exe</A> Installs the basic GMT distribution
+		<LI><A HREF="ftp://mirror.geosci.usyd.edu.au/gmt/windows/GMT_basic_install.exe">GMT_basic_install.exe</A> Installs the basic GMT distribution
 		<LI><A HREF="ftp://mirror.geosci.usyd.edu.au/gmt/windows/GSHHS_fullhigh_install.exe">GSHHS_fullhigh_install.exe</A> Installs the Full and High GSHHS resolution coastlines
 		<LI><A HREF="ftp://mirror.geosci.usyd.edu.au/gmt/windows/GMT_PDF_install.exe">GMT_PDF_install.exe</A> Installs the GMT PDF documentation.
 	</UL>
